@@ -1,5 +1,6 @@
 [SNAPSHOT]
- * Add Naver API
+ * Add Naver API (thanks to chooco)
+ * handle OAuth2 error response for Issuing an Access Token (thanks to juherr)
 
 [3.1.0]
  * fix OdnoklassnikiServiceImpl signature, params for hash must be sorted in lexicographic order, see http://new.apiok.ru/dev/methods/
